@@ -125,7 +125,7 @@ netcdf in_grp {
     vrt_nbr=1,2;
 
     //
-    //g8g1: test ncwa in groups : ncwa -O -N -a lev -v lev -w lev_wgt in_grp3.nc out.nc
+    //g8g1: test ncwa in groups 
     //
     group: g8g1 { 
     variables:
